# rust_foxglovebridge_websocket_trial

./: Cargo.toml  README.md  foxglovebridge_start_command.txt
src/: main.rs
